dist/1.0/bin/sample/retrieveUnpackaged/objects/OSSAttributeValue__c.object
<CustomObject>
    <fields>
        <fullName>OSSdescription__c</fullName>
        <description>Text representation of the attribute&apos;s value in OSS enumerator.</description>
        <label>OSS Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OSSid__c</fullName>
        <description>Id of the attribute&apos;s value in OSS enumerator.</description>
        <label>OSS Id</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDCid__c</fullName>
        <description>Temporary attribute id generated by Product Configurator for OSS</description>
        <externalId>true</externalId>
        <label>SFDC Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <description>Relation to the user which edited attribute in OSS.</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OSS_Attribute_Values</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>OSS Attribute Value</label>
    <nameField>
        <displayFormat>OA-{00000000}</displayFormat>
        <label>OSS Attribute Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OSS Attribute Values</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>